# toll-plaza-simulator

./: LICENSE  README.md  pyproject.toml  requirements.txt  send.py
docs/: .$Class Diagram.drawio.bkp  Class Diagram.drawio  hld.md
src/: booth.py  booth_manager.py  main.py  rabbitmq_helper.py  receive.py  toll_plaza_manager.py  traffic_generator.py  vehicle.py
src/messaging/: consume_message.py  message_sender.py  pubsub_helper.py
src/toll_plaza_management/: toll_plaza.py  toll_plaza_business_logic.py  toll_plazas_controller.py
src/traffic_management/: booth.py  booth_business_logic.py  traffic_generator.py  vehicle.py
